--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 OPENAI_API_KEY = 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
 SERP_API_KEY = bd4187d5f23e6a405a6470fe4fe03e61742cccf4
 BROWSERLESS_API_KEY = 0af8da42-e7eb-4c99-a98e-34d924416991
+ANTHROPIC_API_KEY = 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
